2018-12-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Detect and reject zero-length
	deflate-encoded row in MIFF version 0.  Fixes oss-fuzz 11876
	"graphicsmagick/coder_MIFF_fuzzer: Use-of-uninitialized-value in
	deflate_slow". (Credit to OSS-Fuzz)

	* configure.ac: Improve search for true Microsoft Windows fonts
	and provide better indication of results.  Fix a typo which caused
	DcrawExtraOptions not to be evaluated correctly.

2018-12-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (QuantumTransferMode): Be more strict about the
	requirements for CIE Log2(L) and LOGLUV images.
	(ReadTIFFImage): Apply memory resource limits to strip and tile
	allocations.
	(ReadTIFFImage): Rationalize tile width/height to reject large
	tile sizes which are much larger than the image dimensions.  Fixes
	oss-fuzz 11824 "graphicsmagick/coder_BIGTIFF_fuzzer: Out-of-memory
	in graphicsmagick_coder_BIGTIFF_fuzzer". (Credit to OSS-Fuzz)
	(ReadTIFFImage): Return with error if TIFFClientOpen() reports
	errors yet still returns a TIFF handle.

2018-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tga.c (WriteTGAImage): Image rows/columns must not be
	larger than 65535. Fixes SourceForge #583 "heap-buffer-overflow in
	WriteTGAImage of tga.c".

2018-12-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix heap overflow in 32-bit build
	due to arithmetic overflow.  Only happens if limits are changed
	from defaults. Fixes SourceForge #582 "heap-buffer-overflow in
	ReadBMPImage of bmp.c".

2018-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* common.shi.in (MAGICK_FONT): The test suite must pass even on
	systems where we don't find any fonts.

2018-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Sanitize claimed profile size
	before allocating memory for it.  Fixes oss-fuzz 11781