@@ -38,6 +38,10 @@
 <p>2018-12-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/dib.c (ReadDIBImage): DIB images claiming more than
+8-bits per pixel are not colormapped.  Reject such files.  Fixes
+SourceForge issue #585 &quot;Assertion Failure in coders/png.c:7503&quot;.
+The problem is in the DIB reader rather than PNG.</li>
 <li>coders/miff.c (ReadMIFFImage): Detect and reject zero-length
 deflate-encoded row in MIFF version 0.  Fixes oss-fuzz 11876
 &quot;graphicsmagick/coder_MIFF_fuzzer: Use-of-uninitialized-value in
